--- a/index.html
+++ b/index.html
@@ -3,127 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Smooth Scroll Frames with GSAP</title>
+  <title>Enter Experience</title>
   <style>
-    body, html {
+    body {
       margin: 0;
-      padding: 0;
-      height: 400vh; /* enough scroll space */
-      background: #000;
-    }
-
-    #frameContainer {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 100vw;
       height: 100vh;
-      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(135deg, #000428, #004e92);
+      font-family: Arial, sans-serif;
     }
 
-    #frameContainer img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-      display: block;
-    }
-
-    #playAudioBtn {
-      position: fixed;
-      bottom: 20px;
-      left: 20px;
-      z-index: 10;
-      background: transparent;
-      border: none;
+    .enter-btn {
+      padding: 1.2rem 2.5rem;
+      font-size: 1.5rem;
+      font-weight: bold;
       color: #fff;
-      font-size: 16px;
-      outline: 2px solid #fff;
+      background: #ff4e50;
+      border: none;
+      border-radius: 50px;
       cursor: pointer;
+      transition: transform 0.2s ease, background 0.3s ease;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    }
+
+    .enter-btn:hover {
+      background: #fc913a;
+      transform: scale(1.1);
     }
   </style>
 </head>
 <body>
-  <!-- Background Audio -->
-  <audio id="bgAudio" src="audio/background.m4a" loop hidden></audio>
-  <button id="playAudioBtn">Play Audio</button>
+  <button class="enter-btn" id="enterBtn">Enter Experience</button>
 
-  <!-- Scroll-triggered Audio -->
-  <audio id="scrollAudio" src="audio/scroll.mp3" hidden></audio>
-
-  <!-- Frame Container -->
-  <div id="frameContainer">
-    <img id="scrollFrame" src="frames/ezgif-frame-001.png" alt="Frame">
-  </div> 
-
-  <!-- GSAP + ScrollTrigger -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-  
   <script>
-    // --- CONFIG ---
-    const totalFrames = 150; // adjust if you have more/less
-    const frameElement = document.getElementById("scrollFrame");
-    const bgAudio = document.getElementById("bgAudio");
-    bgAudio.volume = 0.5; // adjust volume as needed
-    const scrollAudio = document.getElementById("scrollAudio");
-    scrollAudio.volume = 1.0
-    const playAudioBtn = document.getElementById("playAudioBtn");
-    let audioStarted = false;
+    document.getElementById("enterBtn").addEventListener("click", () => {
+      // Preload / allow audio to play on user interaction
+      const audio = new Audio("your-audio.mp3");
+      audio.play();
 
-    // --- HELPERS ---
-    function pad(num, size) {
-      return String(num).padStart(size, "0");
-    }
-
-    function preloadImages() {
-      for (let i = 1; i <= totalFrames; i++) {
-        const img = new Image();
-        img.src = `frames/ezgif-frame-${pad(i, 3)}.png`;
-      }
-    }
-    preloadImages();
-
-    // --- BACKGROUND AUDIO CONTROL ---
-    playAudioBtn.addEventListener("click", () => {
-      bgAudio.play();
-      playAudioBtn.style.display = "none";
-      audioStarted = true;
-    });
-
-    window.addEventListener("scroll", function onFirstScroll() {
-      if (!audioStarted) {
-        bgAudio.play().catch(() => {});
-        playAudioBtn.style.display = "none";
-        audioStarted = true;
-        window.removeEventListener("scroll", onFirstScroll);
-      }
-    });
-
-    // --- SCROLL FRAMES + AUDIO ---
-    gsap.registerPlugin(ScrollTrigger);
-
-    let frame = { i: 1 };
-
-    gsap.to(frame, {
-      i: totalFrames,
-      ease: "none",
-      scrollTrigger: {
-        scrub: true,
-        start: "top top",
-        end: "bottom bottom",
-        onUpdate: (self) => {
-          // Update frame
-          let frameNum = pad(Math.round(frame.i), 3);
-          frameElement.src = `frames/ezgif-frame-${frameNum}.png`;
-
-          // Play scroll audio (trigger once per scroll activity)
-          if (self.isActive && scrollAudio.paused) {
-            scrollAudio.currentTime = 0;
-            scrollAudio.play().catch(() => {});
-          }
-        }
-      }
+      // Redirect to your main animation page
+      window.location.href = "scroll.html"; // change if your animation page has a different name
     });
   </script>
 </body>
